index.css
.centered {
    text-align: center;
}

.smaller {
    font-size: x-large;
}

.even-smaller {
    font-size: large;
}

.highlight_energy {
    color: #1E90FF;
}

.highlight_attack {
    color: #DC143C;
}

.highlight_defence {
    color: #008000;
}

.smaller-tesla {
    width: 300px;
    height: auto;
}

.highlight_tesla {
    color: #FF6600;
}

.highlight_iron_curtain {
    color: #800000;
}

.and-even-smaller {
    font-size: medium;
}

.and-smaller-than-that {
    font-size: small;
}

.and-smaller-yet-than-that {
    font-size: x-small;
}

.and-so-small-that-there-isnt-another-class {
    font-size: xx-small;
}

.mono {
    font-family: monospace, monospace;
}

.shift-left {
    margin-left: -210px;
}

#title img {
    height: 60vh;
    width: auto;
}

#first-view-of-board:not(.active) {
    display: none;
}

#tesla-tower.active+#first-view-of-board {
    display: block !important;
}

#empty-board:not(.active) {
    display: none;
}

#statistics:not(.active) {
    display: none;
}

#first-energy-towers:not(.active) {
    display: none;
}

#first-energy-towers-built:not(.active) {
    display: none;
}

#first-attack-towers:not(.active) {
    display: none;
}

#first-attack-towers-built:not(.active) {
    display: none;
}

#first-defense-towers:not(.active) {
    display: none;
}

#first-defense-towers-built:not(.active) {
    display: none;
}

#iron-curtain-built:not(.active) {
    display: none;
}

#row-heat:not(.active) {
    display: none;
}

#global-heuristics:not(.active) {
    display: none;
}

#complexity:not(.active) {
    display: none;
}

.vertically-centre {
    vertical-align: middle;
}

.pad-right {
    padding-right: 50px;
}

